--- a/app/src/main/res/layout/lastquestion.xml
+++ b/app/src/main/res/layout/lastquestion.xml
@@ -24,36 +24,39 @@
             android:textStyle="normal|bold"
             android:textSize="24sp"
             android:textAlignment="center" />
-
+        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <RadioButton
             android:text="SKT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/radioButton1" />
+            android:id="@+id/radioButton21" />
 
         <RadioButton
             android:text="Fnatic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/radioButton2" />
+            android:id="@+id/radioButton22" />
 
         <RadioButton
             android:text="EDG"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/radioButton3" />
+            android:id="@+id/radioButton23" />
 
         <RadioButton
             android:text="Origen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/radioButton4" />
-
+            android:id="@+id/radioButton24" />
+        </RadioGroup>
         <Button
             android:text="Submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/submitbtn" />
+            android:id="@+id/submitbtn2" />
     </LinearLayout>
 
 </LinearLayout>
