--- a/app/src/main/res/layout/results.xml
+++ b/app/src/main/res/layout/results.xml
@@ -10,14 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.salle.master.quiz.MainActivity">
 
-    <Button
-        android:text="Try again"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/startbtn"
-        android:layout_marginBottom="115dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+
 
     <TextView
         android:text="Your results:"
@@ -29,32 +22,59 @@
         android:layout_marginTop="33dp"
         android:textStyle="normal|bold" />
 
-    <TextView
-        android:text="Incorrect:"
+    <Button
+        android:text="Try again"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5"
-        android:textStyle="normal|bold" />
+        android:layout_below="@+id/textView7"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginTop="97dp"
+        android:id="@+id/tryagain" />
 
     <TextView
         android:text="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/totalquestions"
-        android:layout_above="@+id/totalcorrect"
-        android:layout_toEndOf="@+id/startbtn"
-        android:layout_marginStart="30dp" />
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_toEndOf="@+id/tryagain" />
+
+    <TextView
+        android:text="Total number of questions:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:id="@+id/textView6"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/textView3"
+        android:layout_toStartOf="@+id/totalquestions"
+        android:layout_marginEnd="34dp" />
+
+    <TextView
+        android:text="Correct:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/textView6"
+        android:layout_alignStart="@+id/textView6" />
+
+    <TextView
+        android:text="Incorrect:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/totalcorrect"
+        android:layout_alignStart="@+id/textView5" />
 
     <TextView
         android:text="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/totalcorrect"
-        android:layout_alignBaseline="@+id/textView5"
-        android:layout_alignBottom="@+id/textView5"
+        android:layout_below="@+id/totalquestions"
         android:layout_alignStart="@+id/totalquestions" />
 
     <TextView
@@ -64,26 +84,5 @@
         android:id="@+id/totalincorrect"
         android:layout_below="@+id/totalcorrect"
         android:layout_alignStart="@+id/totalcorrect" />
-
-    <TextView
-        android:text="Total number of questions:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="79dp"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3"
-        android:layout_marginEnd="20dp"
-        android:textStyle="normal|bold" />
-
-    <TextView
-        android:text="Correct:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/textView6"
-        android:layout_alignStart="@+id/textView6"
-        android:textStyle="normal|bold"
-        android:layout_alignEnd="@+id/textView6" />
 
 </RelativeLayout>
